# easydev

./: .readthedocs.yml  .travis.yml  COPYING  MANIFEST.in  README.rst  README.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  main.yml  pypi.yml
doc/: ChangeLog.txt  Makefile  contents.rst  requirements.txt
doc/source/: conf.py  developers.rst  index.rst  installation.rst  quickstart.rst  references.rst
easydev/: __init__.py  appdirs.py  browser.py  chunks.py  codecs.py  config_tools.py  console.py  copybutton.py  decorators.py  dependencies.py  doc.py  easytest.py  logging_tools.py  lsf.py  md5tools.py  misc.py  multicore.py  multigit.py  multisetup.py  options.py  package.py  paths.py  platform.py  profiler.py  progressbar.py  setuptools.py  sphinx_themes.py  timer.py  tools.py  url.py
share/themes/cno/: layout.html
share/themes/cno/static/: software.css_t
share/themes/standard/: google_head.html  layout.html
src/easydev/: __init__.py  appdirs.py  browser.py  codecs.py  colors.py  config_tools.py  console.py  copybutton.py  decorators.py  dependencies.py  doc.py  easytest.py  logging_tools.py  lsf.py  misc.py  multicore.py  multigit.py  multisetup.py  package.py  paths.py  platform.py  profiler.py  progressbar.py  pypi_downloads.py  setuptools.py  sphinx_themes.py  tools.py  url.py  xfree86.py
test/: conftest.py  pytest.ini  test_appdirs.py  test_browse.py  test_chunks.py  test_cnolab_sphinx.py  test_codecs.py  test_colors.py  test_config.py  test_console.py  test_copybutton.py  test_decorators.py  test_dependencies.py  test_doc.py  test_easytest.py  test_logging_tools.py  test_lsf.py  test_md5.py  test_misc.py  test_multicore.py  test_multigit.py  test_multisetup.py  test_options.py  test_package.py  test_paths.py  test_platform.py  test_profiler.py  test_progressbar.py  test_pypi_downloads.py  test_setuptools.py  test_timer.py  test_tools.py  test_url.py
test/data/: config.ini
(+1 files in other folders)
